--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -15,7 +15,7 @@
   background-color: #ca4e79;
 }
 .emphasis .title-champss {
-  font-family: Verdana, Arial, Helvetica, sans-serif;
+  /* font-family: Verdana, Arial, Helvetica, sans-serif; */
   color: #e2e2e2;
   padding-top: 14em;
 }
