--- a/src/components/Menu/index.css
+++ b/src/components/Menu/index.css
@@ -15,7 +15,7 @@
 }
 
 .menu .buttons-center {
-  font-family: cursive;
+  font-family: "Shizuru", cursive;
   color: #fff;
   padding-left: 2em;
 }
@@ -25,7 +25,7 @@
 }
 
 .menu .button-session {
-  font-family: cursive;
+  /* font-family: cursive; */
   color: #07c689;
   margin-right: 0.5em;
 }
