--- a/src/components/SearchSlider/index.css
+++ b/src/components/SearchSlider/index.css
@@ -3,7 +3,6 @@
   justify-content: space-between;
   margin-top: 2em;
   margin-bottom: 4em;
-
   border-radius: 3%;
   box-shadow: inset 0 0 0.2em #f3eae8, 0 0 1em #ffd026;
 }
@@ -18,7 +17,7 @@
 }
 .slider .buttons-search-style {
   color: #887675;
-  font-family: "Lucida Console", Courier, monospace;
+  /* font-family: "Lucida Console", Courier, monospace; */
 }
 .slider .buttons-search-style:hover {
   background: none;
@@ -30,5 +29,5 @@
 }
 .slider .button-choice-slider button {
   color: #300c08;
-  font-family: "Lucida Console", Courier, monospace;
+  /* font-family: "Lucida Console", Courier, monospace; */
 }
