--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   background-color: #000913;
-  font-family: "Shizuru", cursive !important;
+  font-family: "Teko", sans-serif !important;
   color: #fff;
 }
 html {
