--- a/src/components/AtributteList/index.css
+++ b/src/components/AtributteList/index.css
@@ -1,9 +1,8 @@
 .container-stats {
   border: 3px double #913359;
-  margin-top: 2em;
-  margin-left: 3em;
+  margin-top: 3em;
   text-align: start;
-  width: 33%;
+  width: 40%;
   height: 100%;
 }
 
@@ -14,18 +13,44 @@
   list-style-type: none;
 }
 .list-atributte-champ .list .atributte {
-    padding-bottom: 1em;
+  padding-bottom: 0.5em;
+}
+.indic {
+  animation: effect-arrow 1s ease-in-out alternate infinite;
+  vertical-align: middle;
+  padding-right: 0.5em;
+}
+.title-stats {
+  display: flex;
+  justify-content: start;
+  margin-top: 2em;
+  font-size: 30px;
+}
+@keyframes effect-arrow {
+  to {
+    transform: translateX(5px);
   }
-  .indic {
-    animation: effect-arrow 1s ease-in-out alternate infinite;
-    vertical-align: middle;
-    padding-right: 0.5em;
+}
+.color-stats {
+  color: gold;
+}
+
+@media (max-width: 975px) {
+  .title-stats {
+    display: flex;
+    justify-content: start;
+    margin-top: 2em;
+    font-size: 30px;
   }
-  @keyframes effect-arrow {
-    to {
-      transform: translateX(5px);
-    }
+  .stats .list-atributte-champ {
+    display: block;
   }
-  .atributte .color-stats {
-    color: gold;
+  .container-stats {
+    border: 3px double #913359;
+    margin-top: 3em;
+    margin-bottom: 4em;
+    text-align: start;
+    width: 100%;
+    height: 100%;
   }
+}
