mudanças input e responsividade

--- a/src/components/InfoChamp/index.css
+++ b/src/components/InfoChamp/index.css
@@ -186,7 +186,7 @@ body {
 .container-info {
   display: flex;
   align-items: center;
-  margin-top: 100vh;
+  margin-top: 110vh;
 }
 .container-skills .img-skills {
   width: 60%;
@@ -227,11 +227,12 @@ body {
   .container-title-champ {
     display: flex;
     justify-content: start;
-    height: 30vh;
+    height: 10vh;
     width: 100vw;
   }
   .title-champ .bc-champ-selected {
-    width: 10%;
+    margin-left: 1.5em;
+    width: 100%;
     height: 700px;
   }
   .font-title {
@@ -240,7 +241,7 @@ body {
   }
   .name-caption-champ .font-sub-title {
     font-size: 20px;
-    color: #fff;
+    color: gold;
     display: block;
     padding-bottom: 0.5em;
   }
@@ -256,6 +257,7 @@ body {
     display: flex;
     width: 70%;
   }
+
   .container-img-champ-info {
     display: none;
   }
@@ -277,7 +279,8 @@ body {
   .container-info {
     display: flex;
     align-items: center;
-    margin-top: 70vh;
+    margin-top: 90vh;
+    background-color: #fff;
   }
 
   .animate {
