--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -48,4 +48,9 @@
     background-size: cover;
     background-image: url("https://nexus.leagueoflegends.com/wp-content/uploads/2018/05/LOL_CMS_209_Article_01_kws3tppfg8hn2hwnqtj2.jpg");
   }
+  .emphasis .title-champss {
+    /* font-family: Verdana, Arial, Helvetica, sans-serif; */
+    color: #e2e2e2;
+    padding-top: 12em;
+  }
 }
