--- a/src/components/Menu/index.css
+++ b/src/components/Menu/index.css
@@ -15,7 +15,7 @@
 }
 
 .menu .buttons-center {
-  font-family: "Shizuru", cursive;
+  font-family: "Smooch Sans", sans-serif !important;
   color: #fff;
   padding-left: 2em;
 }
