--- a/src/components/InfoChamp/index.css
+++ b/src/components/InfoChamp/index.css
@@ -2,7 +2,7 @@ body {
   overflow-x: hidden;
 }
 .title-champ {
-  width: 80%;
+  width: 90%;
 }
 .title-champ .container-bc-champ-selected {
   display: flex;
@@ -40,6 +40,7 @@ body {
   display: block;
   padding-bottom: 0.5em;
   color: #fff;
+  margin-bottom: 3em;
 }
 .container-carrosel {
   margin-top: 45%;
@@ -215,7 +216,7 @@ body {
   height: 100%;
 }
 .animate .title-skills {
-  width: 91%;
+  width: 93%;
   margin-top: 20%;
   font-size: 30px;
   text-align: start;
@@ -236,6 +237,28 @@ body {
     transform: translateY(10px);
   }
 }
+@media (max-width: 1440px) {
+  .animate .title-skills {
+    width: 85%;
+    margin-top: 20%;
+    margin-left: 1.7em;
+    font-size: 30px;
+    text-align: start;
+    background-color: #b9c8ff;
+    color: black;
+  }
+}
+@media (max-width: 1024px) {
+  .animate .title-skills {
+    width: 92%;
+    margin-top: 20%;
+    margin-left: 0;
+    font-size: 30px;
+    text-align: start;
+    background-color: #b9c8ff;
+    color: black;
+  }
+}
 
 @media (max-width: 975px) {
   .container-title-champ {
@@ -245,16 +268,13 @@ body {
     width: 100vw;
   }
   .name-caption-champ {
-    display: none;
     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
       "Lucida Sans", Arial, sans-serif;
-    background-color: #fff;
+
     width: 18.5em;
     margin-right: 2em;
   }
 
-  .title-champ .bc-champ-selected {
-  }
   .container-title-subtitle-champ {
     margin-left: 1.5em;
     height: 100vh;
@@ -262,12 +282,12 @@ body {
   .font-title-mobile {
     margin-top: auto;
     font-size: 60px;
-    color: gold;
+    color: #fff;
   }
   .font-sub-title-mobile {
     margin-top: 10em;
     font-size: 30px;
-    color: gold;
+    color: #fff;
     display: block;
     padding-bottom: 0.5em;
   }
@@ -323,6 +343,22 @@ body {
     /* animation: slide 3s forwards;  */
   }
 }
+@media (max-width: 768px) {
+  .animate .title-skills {
+    width: 92%;
+    margin-top: 20%;
+    font-size: 30px;
+    text-align: start;
+    background-color: #b9c8ff;
+    color: black;
+  }
+
+  .container-info {
+    display: flex;
+    align-items: center;
+    margin-top: 85vh;
+  }
+}
 @media (max-width: 480px) {
   .button-select-champ {
     animation: effect-button-select-champ 1s ease-in-out alternate infinite;
@@ -332,5 +368,47 @@ body {
     margin-bottom: 3em;
     box-shadow: inset 0 0 0em #f3eae8, 0 0 1em #908eee;
     color: gold;
+  }
+}
+@media (max-width: 425px) {
+  .animate .title-skills {
+    width: 89%;
+    margin-top: 20%;
+    font-size: 30px;
+    text-align: start;
+    background-color: #b9c8ff;
+    color: black;
+  }
+}
+@media (max-width: 375px) {
+  .container-skills .img-skills {
+    width: 60px;
+    height: 70px;
+    margin-bottom: 3em;
+    border: 1px solid #22284a;
+    transition: 0.6s;
+    animation-timing-function: ease;
+  }
+  .container-description {
+    display: block;
+    width: 70%;
+  }
+  .animate .title-skills {
+    width: 86%;
+    margin-top: 20%;
+    font-size: 30px;
+    text-align: start;
+    background-color: #b9c8ff;
+    color: black;
+  }
+}
+@media (max-width: 320px) {
+  .animate .title-skills {
+    width: 84%;
+    margin-top: 20%;
+    font-size: 30px;
+    text-align: start;
+    background-color: #b9c8ff;
+    color: black;
   }
 }
