--- a/src/components/SkinsDisposable/index.css
+++ b/src/components/SkinsDisposable/index.css
@@ -17,7 +17,7 @@
 .container-carrosel {
   width: 30%;
   height: 550px;
-  /* display: flex; AQUI */
+
   margin-top: auto;
   margin-bottom: auto;
   /* border: 1px solid red; */
@@ -54,8 +54,7 @@
   width: 100%;
   height: 100%;
 }
-.carrosel-skins {
-}
+
 .img-carrosel-vertical {
   width: 200px;
   height: 100%;
@@ -92,17 +91,17 @@
     display: block;
   }
   .bc-mobile {
-    width: 100%;
-    height: 200px;
+    width: 700px;
+    height: 300px;
     display: flex;
     margin-top: 2em;
     margin-right: 0;
 
     /* border: 1px solid blue; */
   }
-  .bcc .img-skin-mobile {
+  .bc-mobile .img-skin-mobile {
     width: 100%;
-    height: 200px;
+    height: 100%;
   }
   .container-skins {
     margin-top: 30vh;
@@ -160,5 +159,16 @@
     to {
       transform: translateY(10px);
     }
+  }
+}
+@media (max-width: 425px) {
+  .bc-mobile {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    margin-top: 2em;
+    margin-right: 0;
+
+    /* border: 1px solid blue; */
   }
 }
