--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -1,22 +1,11 @@
 .emphasis {
   background-color: transparent;
 }
-/* https://monophy.com/media/ip68eDWiINMQh3qysS/monophy.gif */
-@media (min-width: 800px) {
-  .gif {
-    background-image: url("https://freight.cargo.site/t/original/i/16fe4fa6beff8efe5b99c160c0274daa9ed5be1123a7091b27c47dabd25ca0f6/Untitled-15.gif");
-    background-size: cover;
-    height: 100vh;
-    padding: 0;
-    margin: 0;
-  }
-}
 
 .emphasis .paper {
   background-color: #ca4e79;
 }
 .emphasis .title-champss {
-  /* font-family: Verdana, Arial, Helvetica, sans-serif; */
   color: #e2e2e2;
   padding-top: 14em;
 }
@@ -52,8 +41,34 @@
     margin-bottom: 10em;
   }
   .emphasis .title-champss {
-    /* font-family: Verdana, Arial, Helvetica, sans-serif; */
     color: #e2e2e2;
     padding-top: 12em;
+  }
+}
+@media (min-width: 800px) {
+  .gif {
+    background-image: url("https://freight.cargo.site/t/original/i/16fe4fa6beff8efe5b99c160c0274daa9ed5be1123a7091b27c47dabd25ca0f6/Untitled-15.gif");
+    background-size: cover;
+    height: 100vh;
+    padding: 0;
+    margin: 0;
+  }
+}
+@media (max-width: 768px) {
+  .slider .img {
+    cursor: pointer;
+    height: 100px;
+    width: 200px;
+    transition: all 0.4s;
+    animation-timing-function: ease;
+  }
+}
+@media (max-width: 425px) {
+  .slider .img {
+    cursor: pointer;
+    height: 100px;
+    width: 105px;
+    transition: all 0.4s;
+    animation-timing-function: ease;
   }
 }
